--- a/slides/refs.bib
+++ b/slides/refs.bib
@@ -23,14 +23,13 @@
  publisher = {O'Reilly Media, Inc.},
 }
 
-@book{Wickham:2017:RDS:3086927,
- author = {Wickham, Hadley and Grolemund, Garrett},
- title = {R for Data Science: Import, Tidy, Transform, Visualize, and Model Data},
- year = {2017},
- isbn = {1491910399, 9781491910399},
- edition = {1st},
+@book{Wickhamr4ds,
+ author = {Wickham, Hadley and Çetinkaya-Rundeland, Mine and Grolemund, Garrett},
+ title = {R for Data Science (2e)},
+ year = {2023},
+ edition = {2nd},
  publisher = {O'Reilly Media, Inc.},
- url = {https://r4ds.had.co.nz/},
+ url = {https://r4ds.hadley.nz/},
 }
 
 @MISC{Bryan_Happy_Git,
@@ -51,26 +50,7 @@
   }
 
 
-@ARTICLE{Wickham2019-ml,
-  title    = "Welcome to the Tidyverse",
-  author   = "Wickham, Hadley and Averick, Mara and Bryan, Jennifer and Chang,
-              Winston and McGowan, Lucy and Fran{\c c}ois, Romain and
-              Grolemund, Garrett and Hayes, Alex and Henry, Lionel and Hester,
-              Jim and Kuhn, Max and Pedersen, Thomas and Miller, Evan and
-              Bache, Stephan and M{\"u}ller, Kirill and Ooms, Jeroen and
-              Robinson, David and Seidel, Dana and Spinu, Vitalie and
-              Takahashi, Kohske and Vaughan, Davis and Wilke, Claus and Woo,
-              Kara and Yutani, Hiroaki",
-  abstract = "Software archive",
-  journal  = "JOSS",
-  volume   =  4,
-  number   =  43,
-  pages    = "1686",
-  month    =  nov,
-  year     =  2019
-}
 
-  
 @ARTICLE{Wickham2014-nl,
   title    = "Tidy Data",
   author   = "Wickham, Hadley",
