--- a/slides/refs.bib
+++ b/slides/refs.bib
@@ -649,3 +649,30 @@
     note = {R package version 6.0-93},
     url = {https://CRAN.R-project.org/package=caret},
   }
+  
+  
+@article{broman_data_2018,
+	title = {Data Organization in Spreadsheets},
+	volume = {72},
+	issn = {0003-1305},
+	url = {https://doi.org/10.1080/00031305.2017.1375989},
+	doi = {10.1080/00031305.2017.1375989},
+	abstract = {{ABSTRACTSpreadsheets} are widely used software tools for data entry,
+storage, analysis, and visualization. Focusing on the data entry and
+storage aspects, this article offers practical recommendations for
+organizing spreadsheet data to reduce errors and ease later analyses. The
+basic principles are: be consistent, write dates like {YYYY}-{MM}-{DD}, do not
+leave any cells empty, put just one thing in a cell, organize the data as
+a single rectangle (with subjects as rows and variables as columns, and
+with a single header row), create a data dictionary, do not include
+calculations in the raw data files, do not use font color or highlighting
+as data, choose good names for things, make backups, use data validation
+to avoid data entry errors, and save the data in plain text files.},
+	pages = {2--10},
+	number = {1},
+	journaltitle = {Am. Stat.},
+	author = {Broman, Karl W and Woo, Kara H},
+	date = {2018-01-02},
+	note = {Publisher: Taylor \& Francis},
+	keywords = {reproducibility, data-analysis-theory},
+}
