--- a/slides/refs.bib
+++ b/slides/refs.bib
@@ -676,3 +676,12 @@ to avoid data entry errors, and save the data in plain text files.},
 	note = {Publisher: Taylor \& Francis},
 	keywords = {reproducibility, data-analysis-theory},
 }
+
+@book{Rand_comp4biosci,
+author = {Rand, Emma},
+month = oct,
+title = {{Computational Analysis for Bioscientists}},
+url = {https://3mmarand.github.io/comp4biosci/},
+version = {0.1},
+year = {2023}
+}
