--- a/slides/02_intro_to_r_and_working_with_data.Rmd
+++ b/slides/02_intro_to_r_and_working_with_data.Rmd
@@ -42,6 +42,7 @@ xaringanExtra::use_extra_styles(
   hover_code_line = TRUE,         
   mute_unhighlighted_code = TRUE)
 ```
+
 ```{r packages, include=FALSE}
 library(RefManageR)
 library(kableExtra)
@@ -71,7 +72,7 @@ div.grey { background-color:#d3d3d3; border-radius: 0px; padding: 0px;}
 # Overview
 
 * Finding your way round RStudio  
-* Typing in data, doing some calculations on it, plotting it
+* Typing in data and plotting it
 * Understanding the manual  
 * Working with a data  
   * Importing data: working directories and paths  
@@ -178,44 +179,54 @@ Structures
 
 class: inverse
 
-# Typing in data, doing some calculations on it, plotting it
+# Typing in data and plotting it
 
 ---
-# Typing in data, calcs, plots
+# Typing in data and plots
 
 ## The goal
-We will work some data on the number of males in 64 bird nests with a clutch size of 5. You are going to type data in R, summarise and plot it
+
+We will work with some data on the coat colour of 62 cats. You are going to type data in R, summarise and plot it
+
+The data are as a frequency table:
 --
 .pull-left[
 
 ```{r , echo=FALSE}
-n <- c(0, 1, 2, 3, 4, 5)
-freq <- c(4, 13, 14, 15, 13, 5)
-df <- data.frame(n, freq)
+coat <- c("black", "white", "tabby", "ginger", "tortoiseshell", "calico")
+freq <- c(23, 15, 8, 10, 5, 1)
+df <- data.frame(coat, freq)
 knitr::kable(df, 
+             table.attr = "style='width:30%;'",
+             caption = "Frequency of coat colours in 62 cats",
              format = "html",
-             col.names = c("No. males", "No. nests"),
-             row.names = FALSE)  |> 
+             col.names = c("Coat colour", "No. cats"),
+             row.names = FALSE) |>  
   kable_styling(font_size = 16)
 ```
 ]
 .pull-right[
 
 ```{r , echo=FALSE, fig.height=3}
-nest_data <- data.frame(n = factor(n), freq)
-ggplot(data = nest_data, aes(x = n, y = freq)) +
-  geom_col(colour = "black", fill = "white", width = 1) +
-  scale_x_discrete(name = "Number of males",
+coat_data <- data.frame(coat, freq)
+ggplot(data = coat_data, 
+       aes(x = reorder(coat, freq, decreasing = TRUE), 
+           y = freq)) +
+  geom_col(colour = "black", fill = "lightblue", width = 1) +
+  scale_x_discrete(name = "Coat colour",
                    expand = c(0, 0)) +
-  scale_y_continuous(name = "Number of nests",
-                     expand = c(0, 0)) +
+  scale_y_continuous(name = "Number of cats",
+                     expand = c(0, 0),
+                     limits = c(0, 25)) +
   theme_classic()
 ```
 ]
 
 
+
+
 ---
-# Typing in data, calcs, plots
+# Typing in data and plots
 
 ## Getting set up
 
@@ -223,126 +234,60 @@ In RStudio do File | New project | New directory
 
 Be purposeful about where you create it and name it.
 
-I suggest `birds`
+I suggest `dtp-training`
 
 --
 
-Make a new script ![new script](pics/newscript.png) and save it as analysis.R to carry out the rest of the work.  
+Make a new script ![new script](pics/newscript.png) and save it as `cats.R` to carry out the rest of the work.  
 
 
 
 ---
-# Typing in data, calcs, plots
+# Typing in data and plots
 
-## Data structures
+## Creating the data
 
-Make a vector `n` that holds the numbers 0 to 5. 
+Start by making a vector called `coat` that holds coat colours:
+
 ```{r}
-# the number of males in a clutch of five
-n <- c(0, 1, 2, 3, 4, 5)
+# coat colours
+coat <- c("black", 
+          "white", 
+          "tabby", 
+          "ginger", 
+          "tortoiseshell", 
+          "calico")
 ```
 
-* Write your command in the analysis.R  
 
---
+-   Cursor on the line you want to execute, press Ctrl+Enter
 
-* Notice I have used a comment  
---
-
-* Cursor on the line you want to execute  
-
---
-
-* Execute with ![Run](pics/runbutton.png) or Ctrl+Enter 
 
 ---
-# Typing in data, calcs, plots
+# Typing in data and plots
 
-## Data structures
+## Creating the data
 
-Create a vector, `freq`, containing the numbers of nests with 0 to 5 males. 
+Create a vector called `freq` containing the numbers of cats with each coat colour. 
 
 --
 
 ```{r}
-# the number of nests with 0 to 5 males
-freq <- c(4, 13, 14, 15, 13, 5)
+# numbers of cats with each coat colour
+freq <- c(23, 15, 8, 10, 5, 1)
 ```
 
 ---
-# Typing in data, calcs, plots
+# Typing in data and plots
 
 ## Total number of nests
 
-We can use `sum(freq)` to check the total number of nests is 64.
+We can use `sum(freq)` to check the total number of cats is 62
 
 ```{r}
-# the total number of nests
+# the total Number of cats
 sum(freq)
 ```
-
----
-# Typing in data, calcs, plots
-
-## Finding the mean
-We have frequencies so to find the mean number of males per nest we need the total number of males:
-.pull-left[
-```{r , echo=FALSE}
-df$product <- df$n * df$freq
-totalm <- sum(df$product)
-totaln <- sum(df$freq)
-dfchar <- df |>
-  mutate_all(as.character)
-dfchar <- rbind(dfchar, c("Total", totaln, totalm))
-dfchar |> kable(format = "html",
-                 col.names = c("No. males", "No. nests", "No. males *No. nests"),
-                 row.names = FALSE) |> 
-  kable_styling(font_size = 16) |>
-  row_spec(6, hline_after = TRUE) |>
-  row_spec(7, bold = TRUE, background = "#C0C2C9")
-```
-]
-
-.pull-right[
-
-$$\frac{163}{64} = 2.55$$
-]
-
----
-# Typing in data, calcs, plots
-
-## Finding the mean
-Total number of nests:
-```{r}
-total_nests <- sum(freq)
-```
- 
---
-Total number of males
-```{r}
-total_males <- sum(n * freq)
-```
-
----
-# Typing in data, calcs, plots
-
-## Finding the mean
-Mean number of males per nest:
-```{r}
-total_males/total_nests
-```
-
-
----
-# Why it works
-
-R works 'elementwise' unlike most programming languages.  
-` n * freq`
-gives
-
-$$\begin{bmatrix}0\\1\\2\\3\\4\\5\end{bmatrix}\times\begin{bmatrix}4\\13\\14\\15\\13\\5\end{bmatrix}=\begin{bmatrix}0\\13\\28\\45\\52\\25\end{bmatrix}$$
-
-It was designed to make it easy to work with data.
 
 ---
 
@@ -355,7 +300,7 @@ background-image: url(pics/ggplot2.png)
 background-position: 90% 75%
 background-size: 200px
 
-# Typing in data, calcs, plots
+# Typing in data and plots
 
 Commands like `c()`, `sum()`, and `str()` are part the 'base' R system.
 
@@ -397,17 +342,15 @@ We will also later use `dplyr` and `tidyr` functions also from `tidyverse`.
 
 `ggplot()` takes a dataframe for an argument
 
-We can make a dataframe of the two vectors, `n` and `freq`: 
+Make a dataframe called `coat_data`: 
+
 ```{r}
-nest_data <- data.frame(n = factor(n), freq)
+coat_data <- data.frame(coat, freq)
 ```
 
-`n` was made into a factor (a categorical variable).
+Click on `coat_data` in the Environment to open a spreadsheet-like view of it.
 
 
-`nest_data` is the name we have given the dataframe
-
-Click on `nest_data` in the Environment. 
 
 ---
 # Plotting using ggplot2
@@ -417,7 +360,7 @@ Click on `nest_data` in the Environment.
 Create a simple barplot using `ggplot` like this:
 
 ```{r, fig.height=3.5}
-ggplot(data = nest_data, aes(x = n, y = freq)) +
+ggplot(data = coat_data, aes(x = coat, y = freq)) +
   geom_col()
 ```
 
@@ -431,7 +374,7 @@ ggplot(data = nest_data, aes(x = n, y = freq)) +
 
 --
 
-`ggplot(data = nest_data)` looks the same. 
+`ggplot(data = coat_data)` looks the same. 
 
 --
 
@@ -443,7 +386,7 @@ Thus...
 
 ## A barplot
 
-`ggplot(data = nest_data, aes(x = n, y = freq))` produces a plot with axes 
+`ggplot(data = coat_data, aes(x = coat, y = freq))` produces a plot with axes
 
 --
 
@@ -496,7 +439,7 @@ Open the manual page using:
 
 Change the fill of the bars using `fill`:
 ```{r plot-last1, fig.show = 'hide'}
-ggplot(data = nest_data, aes(x = n, y = freq)) +
+ggplot(data = coat_data, aes(x = coat, y = freq)) +
   geom_col(fill = "lightblue")
 ```
 .pull-left[
@@ -520,7 +463,7 @@ We can set (map) fill aesthetic to a particular colour inside `geom_col()` or ma
 ---
 # Using manual: Alter a ggplot
 ```{r plot-last2, fig.show = 'hide'}
-ggplot(data = nest_data, aes(x = n, y = freq, fill = n)) +
+ggplot(data = coat_data, aes(x = coat, y = freq, fill = freq)) +
   geom_col()
 ```
 .pull-left[
@@ -543,7 +486,7 @@ Can you use the manual to put the bars next to each other?
 --
 
 ```{r fig.height=2.8}
-ggplot(data = nest_data, aes(x = n, y = freq)) +
+ggplot(data = coat_data, aes(x = coat, y = freq)) +
   geom_col(fill = "lightblue", width = 1)
 ```
 
@@ -555,8 +498,8 @@ ggplot(data = nest_data, aes(x = n, y = freq)) +
 
 .pull-left[
 ```{r plot-last3, fig.show="hide"}
-ggplot(data = nest_data,
-       aes(x = n, y = freq)) +
+ggplot(data = coat_data,
+       aes(x = coat, y = freq)) +
   geom_col(fill = "lightblue", 
            width = 1, 
            colour = "black")
@@ -580,11 +523,13 @@ Make your code easier to read by using white space and new lines
 
 ---
 # Alter a ggplot: axes 
-Changes to a discrete x axis: `scale_x_discrete()`.
 
-Changes to a continuous y axis: `scale_y_continuous()`.
+We can make changes to the axes using:
 
-`ggplot` automatically extends the axes slightly. You can turn this behaviour off with the expand argument.
+-   Changes to a discrete x axis: `scale_x_discrete()`
+-   Changes to a continuous y axis: `scale_y_continuous()`
+
+`ggplot` automatically extends the axes slightly. You can turn this behaviour off with the `expand` argument in `scale_x_discrete()` and `scale_y_continuous()`.
 
 --
 
@@ -593,33 +538,82 @@ Each 'layer' is added to the ggplot() command with a `+`
 ---
 # Alter a ggplot: axes
 
+Remove the gap between the axes and the data:
+
 ```{r fig.height=3.5}
-ggplot(data = nest_data, aes(x = n, y = freq)) +
+ggplot(data = coat_data, aes(x = coat, y = freq)) +
   geom_col(fill = "lightblue", 
            width = 1, 
            colour = "black") +
-  scale_x_discrete(expand = c(0, 0)) + #<<
-  scale_y_continuous(expand = c(0, 0)) #<<
+  scale_x_discrete(expand = c(0, 0)) + 
+  scale_y_continuous(expand = c(0, 0)) 
 ```
 
 .pull-right[
 .footnote[
-`r text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)`  Look up `scale_x_discrete` in the manual and work out how to change "n" to "Number of Males"]
+`r text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)`  Look up `scale_x_discrete` in the manual and work out how to change the axis title from "coat" to "Coat colour"]
 ]
 
 ---
 # Alter a ggplot: axes
 
 ```{r fig.height=2.5}
-ggplot(data = nest_data, aes(x = n, y = freq)) +
+ggplot(data = coat_data, aes(x = coat, y = freq)) +
   geom_col(fill = "lightblue", 
            width = 1, 
            colour = "black") +
   scale_x_discrete(expand = c(0, 0),
-                   name = "Number of Males") + #<<
+                   name = "Coat colour") + 
   scale_y_continuous(expand = c(0, 0),
-                     name = "Number of Nests") 
+                     name = "Number of cats") 
 ```
+
+---
+
+# Alter a ggplot: themes
+
+```{r plot-last4, fig.show="hide"}
+ggplot(data = coat_data, aes(x = coat, y = freq)) +
+  geom_col(width = 1, 
+           colour = "black",
+           fill = "lightblue") +
+  scale_x_discrete(expand = c(0, 0),
+                   name = "Coat colour") + 
+  scale_y_continuous(expand = c(0, 0),
+                     name = "Number of cats",
+                     limits = c(0, 25)) +
+  theme_classic()
+```
+
+---
+```{r ref.label = 'plot-last4', echo = FALSE}
+```
+
+---
+
+# Alter a ggplot: order of bars
+
+Reorder the categories in `coat` by the the value in `freq`:
+
+```{r plot-last5, fig.show="hide"}
+ggplot(data = coat_data, 
+       aes(x = reorder(coat, freq, decreasing = TRUE), 
+           y = freq)) +
+  geom_col(width = 1, 
+           colour = "black",
+           fill = "lightblue") +
+  scale_x_discrete(expand = c(0, 0),
+                   name = "Coat colour") + 
+  scale_y_continuous(expand = c(0, 0),
+                     name = "Number of cats",
+                     limits = c(0, 25)) +
+  theme_classic()
+```
+
+---
+```{r ref.label = 'plot-last5', echo = FALSE}
+```
+
 
 ---
 
@@ -633,7 +627,7 @@ class: inverse
 .pull-left[
 Summarise
 ```{r echo=FALSE}
-pigeon <- read.table("data/pigeon.txt", header = T)
+pigeon <- read_table("data-raw/pigeon.txt")
 pigeon2 <- pivot_longer(data = pigeon,
                         cols = everything(), 
                         names_to = "population",
@@ -700,20 +694,20 @@ We will work with the interorbital distances of domestic pigeons in two differen
 # Working with Data 
 ## Organising
 
-Make two folders in your Project directory (this is also your working directory) called 'data'
+Make a folder in your Project directory (this is also your working directory) called `data-raw`.
 
 The easiest way to do this is in RStudio  - see the bottom right Files panel
 
 --
 
-Save a copy of [pigeon.txt](data/pigeon.txt) to the 'data' folder
+Save a copy of [pigeon.txt](data-raw/pigeon.txt) to the `data-raw` folder
 
 ---
 # Working with Data 
 
 ## Start coding
 
-Make a new script called 'analysis.R'
+Make a new script called `pigeons.R`
 
 --
 
@@ -731,24 +725,27 @@ We need to load the `tidyverse` packages for several of commands we will use.
 ## Importing
 
 
-To read the data in to R you need to use the 'relative path'
-
-to the file in the `read_table()` command:
+To read the data in to R you need to use the 'relative path' to the file: 
 
 
 ```{r}
-pigeon <- read_table("data/pigeon.txt")
+pigeon <- read_table("data-raw/pigeon.txt")
 ```
 
 --
 
-The `data/` part is the 'relative path' to the file. 
+The `data-raw/` part is the 'relative path' to the file. 
 
 --
 It says where the file is **relative to your working directory**
 
-pigeon.txt is inside a folder (directory) called 'data' which is in your working directory.
+`pigeon.txt` is inside a folder (directory) called `data-raw` which is in your working directory.
 
+.footnote[
+.font60[
+More  on File systems and paths: [Computational Analysis for Bioscientists](https://3mmarand.github.io/comp4biosci/file_systems.html) `r Cite(myBib, "Rand_comp4biosci")`.
+]
+]
 
 ---
 # Working with Data
@@ -809,7 +806,7 @@ There may be more than one potential tidy structure.
 # Working with Data 
 
 ```{r echo=FALSE}
-pigeon <- read_table("data/pigeon.txt")
+pigeon <- read_table("data-raw/pigeon.txt")
 ```
 
 ## Tidy format
@@ -844,10 +841,12 @@ knitr::kable(head(pigeon2[c(1:3,41:43),]),
 
 ---
 # Working with Data 
-We can make the data tidy with `pivot_longer()`<sup>1</sup>.
+We can make the data tidy with `pivot_longer()`.
 
 .footnote[
-[1] `pivot_longer()` is a function from a package called `tidyr` which is one of the `tidyverse` packages.
+.font60[
+`pivot_longer()` is a function from a package called `tidyr` which is one of the `tidyverse` packages.
+]
 ]
 --
 
@@ -960,7 +959,7 @@ pigeon2 |>
 # Working with Data 
 To plot this data as a histogram:
 
-```{r plot-last4, fig.show = 'hide'}
+```{r plot-last6, fig.show = 'hide'}
 ggplot(data = pigeon2, aes(x = distance)) +
   geom_histogram(bins = 10,               #<<
                  col = "black") +
@@ -969,7 +968,7 @@ ggplot(data = pigeon2, aes(x = distance)) +
 ```
 .pull-left[
 
-```{r ref.label = 'plot-last4', echo = FALSE, fig.height=3}
+```{r ref.label = 'plot-last6', echo = FALSE, fig.height=3}
 ```
 ]
 
@@ -1003,7 +1002,7 @@ ggplot(data = pigeon2, aes(x = distance, fill = population)) + #<<
 
 `r text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)`  Make the axes cross at (0,0)
 
-```{r plot-last5, fig.show = 'hide'}
+```{r plot-last7, fig.show = 'hide'}
 ggplot(data = pigeon2, aes(x = distance, fill = population)) + 
   geom_histogram(bins = 10, 
                  col = "black") +
@@ -1019,7 +1018,7 @@ result on next slide.
 # Working with Data 
 The result:
 
-```{r ref.label = 'plot-last5', echo = FALSE} 
+```{r ref.label = 'plot-last7', echo = FALSE} 
 ```
 
 ---
@@ -1030,7 +1029,10 @@ The result:
 ```{r fig.height=3}
 ggplot(data = pigeon2, aes(x = distance, fill = population)) +
   geom_density(col = "black") +               #<<
-  scale_x_continuous(name = "Interorbital distance (mm)")
+  scale_x_continuous(name = "Interorbital distance (mm)",
+                     expand = c(0, 0)) + 
+  scale_y_continuous(name = "Density",
+                     expand = c(0, 0)) 
   
 ```
 
@@ -1042,7 +1044,10 @@ Alter the transparency using `alpha`:
 ```{r fig.height=3}
 ggplot(data = pigeon2, aes(x = distance, fill = population)) +
   geom_density(col = "black", alpha = 0.3) +    #<<
-  scale_x_continuous(name = "Interorbital distance (mm)")
+  scale_x_continuous(name = "Interorbital distance (mm)",
+                     expand = c(0, 0)) + 
+  scale_y_continuous(name = "Density",
+                     expand = c(0, 0)) 
   
 ```
 
@@ -1059,7 +1064,10 @@ All [elements can be customised individually](https://ggplot2.tidyverse.org/refe
 ```{r fig.height=3}
 ggplot(data = pigeon2, aes(x = distance, fill = population)) +
   geom_density(col = "black", alpha = 0.3) +
-  scale_x_continuous(name = "Interorbital distance (mm)") +
+  scale_x_continuous(name = "Interorbital distance (mm)",
+                     expand = c(0, 0)) + 
+  scale_y_continuous(name = "Density",
+                     expand = c(0, 0)) +
   theme_classic()    #<<
   
 ```
@@ -1090,7 +1098,8 @@ Note: We need to change the `aes()` as well as the `geom` because this figure ha
 ---
 # Working with Data 
 
-```{r plot-last6, fig.show = 'hide'} 
+```{r eval=FALSE} 
+
 ggplot(data = pigeon2, aes(x = population, y = distance)) + 
   geom_boxplot() +                            
   scale_x_discrete(name = "Population") +
@@ -1101,25 +1110,36 @@ ggplot(data = pigeon2, aes(x = population, y = distance)) +
   
 ```
 
-
 .footnote[
 `r text_spec("Extra exercise:", background = "#25496b", color = "#fdf9f6", bold = TRUE)`  Can you (gratuitously) colour the boxes by population too?
 ]
----
-# Working with Data 
 
-```{r ref.label = 'plot-last6', echo = FALSE} 
-```
 ---
+# Working with Data
+
+```{r}
+ggplot(data = pigeon2, aes(x = population, y = distance, fill = population)) + 
+  geom_boxplot() +                            
+  scale_x_discrete(name = "Population") +
+  scale_y_continuous(name = "Interorbital distance (mm)",
+                   expand = c(0, 0),
+                   limits = c(0, 15)) +
+  theme_classic()
+```
+
+
+---
+
 # Summary
-* Use a script and comment it  
-* organise analyses and use relative paths
-* shortcuts: `<-` is Alt-minus  ` |>` is Ctl-Shift-M  
-* objects are seen in the Environment window  
-* data is read in to R from files into dataframes  
-* the dataframe is a common data structure  
-* you'll eventually get used to the manual!  
-* a `ggplot` has a `data` argument and an `aesthetic` argument; layers are added with a `+`; `geoms`determine how the data are plotted  
+-   Use a script and comment it
+-   organise analyses and use relative paths
+-   shortcuts: `<-` is Alt-minus  ` |>` is Ctl-Shift-M
+-   objects are seen in the Environment window
+-   data is read in to R from files into dataframes
+-   the dataframe is a common data structure
+-   you'll eventually get used to the manual!
+-   a `ggplot` has a `data` argument and an `aesthetic` argument; layers are added with a `+`; `geoms` determine how the data are plotted
+
 ---
 
 class: inverse
