--- a/slides/refs.bib
+++ b/slides/refs.bib
@@ -1,16 +1,16 @@
 @Manual{wickham_et_al,
     title = {dplyr: A Grammar of Data Manipulation},
     author = {Hadley Wickham and Romain Fran\c{c}ois and Lionel Henry and Kirill M\"{u}ller},
-    year = {2019},
-    note = {R package version 0.8.3},
+    year = {2023},
+    note = {R package version 1.1.3},
     url = {https://CRAN.R-project.org/package=dplyr},
   }
 
 @Manual{xaringan,
     title = {xaringan: Presentation Ninja},
     author = {Yihui Xie},
-    year = {2019},
-    note = {R package version 0.12},
+    year = {2024},
+    note = {R package version 0.29},
     url = {https://CRAN.R-project.org/package=xaringan},
   }
 
@@ -81,7 +81,7 @@
     author = {{R Core Team}},
     organization = {R Foundation for Statistical Computing},
     address = {Vienna, Austria},
-    year = {2022},
+    year = {2024},
     url = {https://www.R-project.org/},
   }
 
@@ -126,14 +126,6 @@
   address   = "Boston, MA, USA"
 }
 
-  @Manual{magrittr,
-    title = {magrittr: A Forward-Pipe Operator for R},
-    author = {Stefan Milton Bache and Hadley Wickham},
-    year = {2014},
-    note = {R package version 1.5},
-    url = {https://CRAN.R-project.org/package=magrittr},
-  }
-  
  @Manual{haven,
     title = {haven: Import and Export 'SPSS', 'Stata' and 'SAS' Files},
     author = {Hadley Wickham and Evan Miller},
@@ -243,10 +235,10 @@
 }
 
  @Manual{markdown1,
-    title = {rmarkdown: Dynamic Documents for R},
-    author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-    year = {2019},
-    note = {R package version 1.16},
+  title = {rmarkdown: Dynamic Documents for R},
+  author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
+  year = {2023},
+  note = {R package version 2.25},
     url = {https://github.com/rstudio/rmarkdown},
   }
   
@@ -684,4 +676,24 @@ title = {{Computational Analysis for Bioscientists}},
 url = {https://3mmarand.github.io/comp4biosci/},
 version = {0.1},
 year = {2023}
+}
+
+@book{allaire2022,
+	title = {Quarto},
+	author = {Allaire, J.J. and Teague, Charles and Scheidegger, Carlos and Xie, Yihui and Dervieux, Christophe},
+	year = {2022},
+	month = {01},
+	date = {2022-01},
+	doi = {10.5281/zenodo.5960048},
+	url = {https://github.com/quarto-dev/quarto-cli},
+	note = {DOI: 10.5281/zenodo.5960048}
+}
+
+@book{rand2023,
+	title = {Data Analysis in R for Becoming a Bioscientist},
+	author = {Rand, Emma},
+	year = {2023},
+	month = {05},
+	date = {2023-05},
+	url = {https://3mmarand.github.io/R4BABS/}
 }
